<resources>
    <string name="app_name">MovieSelector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="add_to_watch">Добавить в просмотренные</string>
    <string name="Nic">Введите свой ник</string>
    <string name="email">Введите свой email</string>
    <string name="pass">Введите пароль</string>
    <string name="re_pass">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="time">Введите время(часы)</string>
    <string name="tame_val">time</string>
    <string name="time_min">Введите время(минуты)</string>
    <string name="accept">Подтвердить выбор</string>
    <string name="error_time">Выберете погрешность(минуты)</string>
    <string name="in_main_menu">В главное меню</string>
    <string name="add_in_calendar">Добавить в календарь</string>
    <string name="choise_time">Выбрать время просмотра</string>
    <string name="choise_date">Выбрать дату просмотра</string>
    <string name="back">Назад</string>
    <string name="genre">Выберете нужный жанр</string>
    <string name="film_title">Film Title</string>
    <string name="about_film">About film</string>
    <string name="rating_status">rating_status</string>
    <string name="duration_status">duration_status</string>
    <string name="film_rating">Film Rating:</string>
    <string name="film_duration">Film Duration:</string>
    <string name="in_watching">Перейти в список просмотренных</string>
    <string name="genres">genres</string>
    <string name="rating_status">rating_status</string>
    <string name="duration_status">duration_status</string>
    <string name="film_rating">Film Rating:</string>
    <string name="film_duration">Film Duration:</string>
    <string name="not_interested">Не интересует</string>
    <string name="want_to_watch">Хочу посмотреть</string>
    <string name="about_film">About film</string>
    <string name="logo_fill">Заполните форму подбора фильма</string>
    <string name="genres_choose">Выбор жанра</string>
    <string name="duration_choose">Выбор длительности</string>
    <string name="start_select">Начать подбор</string>
    <string name="delete_all">Очистить все</string>
    <string name="want_watch">Хочу посмотреть</string>
    <string name="watched">Просмотренные</string>
    <string name="go_to_select_film">Подобрать фильмы</string>
    <string name="page">page</string>
    <string name="page_max">page_max</string>
</resources>