<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".mainmenu.ui.fratgmentmenu.FinalChooseStepFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/in_main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_main_menu"
            android:background="#FF9800"
            app:layout_constraintBottom_toBottomOf="@+id/set_in_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/set_in_calendar" />

        <Button
            android:id="@+id/set_in_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_in_calendar"
            android:background="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:background="#4CAF50"
        android:drawableEnd="@android:drawable/ic_menu_recent_history"
        android:text="@string/choise_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:drawableEnd="@android:drawable/ic_menu_today"
        android:text="@string/choise_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>