<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".mainmenu.ui.fratgmentmenu.SelectionFragment">


    <TextView
        android:id="@+id/descript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo_fill"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_genres_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/genres_choose"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descript" />

    <Button
        android:id="@+id/select_duration_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/duration_choose"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_genres_button" />

    <ImageView
        android:id="@+id/genres_done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="@+id/select_genres_button"
        app:layout_constraintEnd_toStartOf="@+id/select_genres_button"
        app:layout_constraintTop_toTopOf="@+id/select_genres_button" />

    <ImageView
        android:id="@+id/duration_done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toBottomOf="@+id/select_duration_button"
        app:layout_constraintEnd_toStartOf="@+id/select_duration_button"
        app:layout_constraintTop_toTopOf="@+id/select_duration_button" />

    <ImageView
        android:id="@+id/genres_disable"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_clear_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/genres_done"
        app:layout_constraintEnd_toStartOf="@+id/genres_done"
        app:layout_constraintTop_toTopOf="@+id/genres_done" />

    <ImageView
        android:id="@+id/duration_disable"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintBottom_toBottomOf="@+id/duration_done"
        app:layout_constraintEnd_toStartOf="@+id/duration_done"
        app:layout_constraintTop_toTopOf="@+id/duration_done" />

    <Button
        android:id="@+id/select_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start_select"
        android:layout_marginTop="30dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_duration_button" />

    <Button
        android:id="@+id/del_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        android:layout_marginBottom="10dp"
        android:background="#F40707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>